CostalCloud/force-app/main/default/objects/Products_Suggested__c.object
<CustomObject>
    <fields>
        <fullName>Default_Quantity__c</fullName>
        <label>Default Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Form</label>
        <referenceTo>disco__Form__c</referenceTo>
        <relationshipLabel>Products Suggested</relationshipLabel>
        <relationshipName>Products_Suggested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Materials__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Materials</label>
        <referenceTo>Materials__c</referenceTo>
        <relationshipLabel>Products Suggested</relationshipLabel>
        <relationshipName>Products_Suggested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Book</label>
        <referenceTo>Pricebook2</referenceTo>
        <relationshipLabel>Products Suggested</relationshipLabel>
        <relationshipName>Products_Suggested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Products Suggested</relationshipLabel>
        <relationshipName>Products_Suggested</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <formula>Product__r.SKU_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SKU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Products Suggested</relationshipLabel>
        <relationshipName>Products_Suggested_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Products Suggested</relationshipLabel>
        <relationshipName>Products_Suggested</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Product Suggested</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Products Suggested Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Suggested</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>